# Vedit

./: .gitignore  Cargo.toml  README.md  test_image_e2e.sh
crates/vedit-cli/: Cargo.toml
crates/vedit-cli/src/: main.rs
crates/vedit-cli/src/commands/: audio.rs  cache.rs  clip.rs  config.rs  history.rs  image.rs  mod.rs  project.rs  render.rs  text.rs  track.rs  video.rs
crates/vedit-cli/tests/: cli_image_test.rs  cli_project_test.rs  cli_render_test.rs  cli_track_test.rs
crates/vedit-core/: Cargo.toml
crates/vedit-core/src/: lib.rs
crates/vedit-core/src/cache/: mod.rs
crates/vedit-core/src/config/: mod.rs
crates/vedit-core/src/context/: mod.rs
crates/vedit-core/src/ffmpeg/: command.rs  mod.rs  probe.rs
crates/vedit-core/src/history/: mod.rs
crates/vedit-core/src/motion/: formula.rs  mod.rs  presets.rs  region.rs
crates/vedit-core/src/project/: clip.rs  io.rs  mod.rs  track.rs
crates/vedit-core/src/render/: audio.rs  compositor.rs  filter_chain.rs  mod.rs  text.rs  video.rs
crates/vedit-core/src/tools/: mod.rs
crates/vedit-core/src/tools/audio/: add_clip.rs  add_track.rs  fade.rs  mix.rs  mod.rs  mute.rs  normalize.rs
crates/vedit-core/src/tools/image/: add_clip.rs  add_track.rs  fade.rs  ken_burns.rs  mod.rs  transform.rs
crates/vedit-core/src/tools/text/: add_clip.rs  add_track.rs  mod.rs  style.rs  subtitle.rs
crates/vedit-core/src/tools/video/: add_clip.rs  add_track.rs  color.rs  effects.rs  mod.rs  speed.rs  stabilize.rs  transform.rs  transition.rs
crates/vedit-gui/: Cargo.toml
crates/vedit-gui/src/: main.rs
docs/: editor-v1.md
scratch/: test_1_portrait.sh  test_2_widescreen.sh  test_3_sequence.sh
test_assets/: blankproj.vedit  edgecase.vedit  mi-proyecto.vedit  mitestaudio.vedit  performancetest.vedit
tmp_test/: dummy.aac  test_project.vedit
