[workspace]
resolver = "2"
members = [
    "crates/vedit-core",
    "crates/vedit-cli",
    "crates/vedit-gui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["vedit developers"]
license = "MIT"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive", "color", "env"] }

# Progress & UI
indicatif = { version = "0.17", features = ["rayon"] }
console = "0.15"

# Async
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
