[package]
name = "vedit-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vedit"
path = "src/main.rs"

[dependencies]
vedit-core = { path = "../vedit-core" }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
